# node-bug-win-pipe-hang

./: .gitignore  CMakeLists.txt  README.md  child.c  parent.c  parent.mjs
